# trabalho_spark

./: .gitignore  README.md  convert_to_csv.py  pyproject.toml
docs/: delta.md  iceberg.md  index.md  mkdocs.yml
docs/docs/: delta.md  iceberg.md  index.md
notebooks/: delta_analise_ips.ipynb  iceberg_analise_ips.ipynb
src/data_engineering/: main.py
